Fix responsive design

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Acme Product Management</title>
+  <title>Movies application</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,5 @@
 <body>
   <pm-root></pm-root>
 </body>
-
 
 </html>
